[tool.poetry]
name = "flink-lab"
version = "0.1.0"
description = ""
authors = ["augustovictor <victor.dev.costa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pulsar-client = "^2.10.2"
apache-flink = "*"
pemja = "*"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
